# collective.wfautodoc

./: CHANGES.rst  HISTORY.rst  MANIFEST.in  README.rst  buildout.cfg  setup.cfg  setup.py
src/collective/wfautodoc/: __init__.py  configure.zcml  generator.py  views.py
