[metadata]
version = 1.2.0.dev0
name = collective.wfautodoc
description = Generates a Graphviz file (or directly creates an SVG) from a Zope/CMF DCWorkflow defintion.
long_description = file: README.rst, CHANGES.rst, LICENCE.rst
keywords = zope plone workflow docu graphviz dot svg
author = Jens Klein
author_email = jk@kleinundpartner.at
url = https://github.com/collective/collective.wfautodoc
license = BSD
classifiers =
    Environment :: Web Environment
    Framework :: Plone
    Framework :: Plone :: Addon
    Framework :: Plone :: 5.2
    Framework :: Plone :: 6.0
    Framework :: Zope
    Framework :: Zope :: 4
    Framework :: Zope :: 5
    License :: OSI Approved :: GNU General Public License (GPL)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Development Status :: 5 - Production/Stable

[options]
include_package_data = True
install_requires =
    setuptools
    pygraphviz
    Products.CMFCore
    Products.DCWorkflow

namespace_packages =
    collective
package_dir =
    = src
packages = find:
zip_safe = False
   
[options.packages.find]
where =
    src

[options.entry_points]
z3c.autoinclude.plugin =
    target = plone

[check-manifest]
ignore =
    buildout.cfg

[isort]
# black compatible Plone isort rules:
profile = black
force_alphabetical_sort = True
force_single_line = True
lines_after_imports = 2

[bdist_wheel]
universal = 1

[zest.releaser]
create-wheel = yes

[flake8]
# black compatible flake8 rules,
# https://black.readthedocs.io/en/stable/compatible_configs.html#flake8
max-line-length = 88
extend-ignore = E203, W503
